--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/proto/api"]
-	path = src/proto/api
+[submodule "src/gvms/proto/api"]
+	path = src/gvms/proto/api
 	url = git@github.com:kingcobra2468/gvms-api.git
