--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,4 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "gvms"
 version = "1.0.0"
+dynamic = ["description", "readme", "requires-python", "license", "authors", "dependencies"]
